--- a/content/why-i-made-this.mdx
+++ b/content/why-i-made-this.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Why I Made This"
 publishedAt: '2024-02-09'
-summary: 'Explaining what finally drove me to make a tech blog'
+summary: 'Explaining what finally drove me to make a blog'
 ---
 
 I have known I wanted to make a tech blog for a long time, but I never really got to it. It can be really hard to find time to code outside of work, but this year, I decided I wanted to be intentional about finding time to code outside of work.
